--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Jinja2==2.6
 Werkzeug==0.8.3
+beautifulsoup4==4.1.3
 gevent==0.13.8
+html5lib==0.95
 raven==3.2.1
 simplejson==3.1.3
 sourcemap==0.1.2
