--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 Jinja2==2.7.3
 Werkzeug==0.10.4
 beautifulsoup4==4.3.2
-cffi==1.1.2
 gevent==1.0.2
 html5lib==0.95
-raven==5.3.1
-requests[security]==2.7.0
+requests[security]==2.9.1
 simplejson==3.1.3
 sourcemap==0.1.8
+raven
